Preserve source compatibility with 8.x